--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==12:58:59=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==13:01:04=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">799.95</p>
+                <p id="net-worth">735.70</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-481.75</p>
+                <p id="unrealized-pl-value">-546.00</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-161.0</h2>
+            <h2 id="column1-title">MNQM24==P/L:-186.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-255.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-266.25=====0.08</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-86.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-72.0</h2>
 
         </div>
         <div class="column">
