--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==13:57:21=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==13:59:07=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">178.20</p>
+                <p id="net-worth">226.20</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-1103.50</p>
+                <p id="unrealized-pl-value">-1055.50</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-551.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-530.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-451.25=====0.08</h2>
+            <h2 id="column2-title">MESM24==P/L:-440.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-98.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-96.5</h2>
 
         </div>
         <div class="column">
