--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==14:08:09=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==14:09:54=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">149.20</p>
+                <p id="net-worth">104.70</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-1132.50</p>
+                <p id="unrealized-pl-value">-1177.00</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-578.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-595.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-486.25=====0.08</h2>
+            <h2 id="column2-title">MESM24==P/L:-495.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-101.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-111.5</h2>
 
         </div>
         <div class="column">
