--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==14:46:24=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==14:48:11=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">75.45</p>
+                <p id="net-worth">96.70</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-1206.25</p>
+                <p id="unrealized-pl-value">-1185.00</p>
             </div>
         </div>
     </header>
@@ -111,15 +111,15 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-588.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-572.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-495.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-498.75=====0.08</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-131.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-135.5</h2>
 
         </div>
         <div class="column">
