--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==16:01:29=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==16:03:16=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">-43.05</p>
+                <p id="net-worth">-47.30</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-1324.75</p>
+                <p id="unrealized-pl-value">-1329.00</p>
             </div>
         </div>
     </header>
@@ -115,11 +115,11 @@
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-550.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-553.75=====0.08</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-126.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-127.0</h2>
 
         </div>
         <div class="column">
