--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(3)Trades==16:06:51=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:11:53=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">-49.80</p>
+                <p id="net-worth">-198.55</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">-133.00</p>
+                <p id="realized-pl-value">-1491.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-1331.50</p>
+                <p id="unrealized-pl-value">-121.50</p>
             </div>
         </div>
     </header>
@@ -111,28 +111,31 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-654.5</h2>
+            <h2 id="column1-title">MNQM24==P/L:-652.5</h2>
+--LIST OF TRADE(4)--
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MESM24==P/L:-556.25=====0.08</h2>
+--LIST OF TRADE(4)--
+MNQM24
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MNQM24</h2>
+--
+BuyLimit: 17885.5
+        </div>
+        <div class="column">
+            <h2 id="column4-title">MESM24</h2>
+--
+BuyLimit: 5106.0
+        </div>
+        <div class="column">
+            <h2 id="column5-title">M2KM24==P/L:-121.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-553.75=====0.08</h2>
+            <h2 id="column6-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-126.0</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
