--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==04:47:24=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==04:48:45=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-253.00</p>
+                <p id="unrealized-pl-value">-252.50</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+BuyLimit: 5100.75
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+BuyLimit: 5100.75
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-252.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-253.5</h2>
 
         </div>
         <div class="column">
