--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:33:55=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:35:46=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1914.35</p>
+                <p id="net-worth">1914.85</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-372.50</p>
+                <p id="unrealized-pl-value">-372.00</p>
             </div>
         </div>
     </header>
@@ -112,30 +112,27 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
---
 BuyLimit: 17575.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MNQM24</h2>
---
-BuyLimit: 17575.25
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MNQM24</h2>
---
-BuyLimit: 17575.25
-        </div>
-        <div class="column">
-            <h2 id="column4-title">MESM24</h2>
+            <h2 id="column2-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">M2KM24==P/L:-372.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-372.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column6-title">MCLK24</h2>
+            <h2 id="column4-title">MCLK24</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
+        </div>
+        <div class="column">
+            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
+            <p id="stocks-content-6d">{{stocks-content-6}}</p>
         </div>
         <div class="column">
             <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
