--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:40:22=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:42:15=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1814.35</p>
+                <p id="net-worth">1790.25</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+214.75</p>
+                <p id="realized-pl-value">0.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-472.50</p>
+                <p id="unrealized-pl-value">-467.00</p>
             </div>
         </div>
     </header>
@@ -116,10 +116,10 @@ SellLimit: 17352.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-SellLimit: 5001.5
+
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-469.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-463.0</h2>
 
         </div>
         <div class="column">
