--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==13:57:47=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==13:59:23=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -115,11 +115,11 @@
 BuyLimit: 17268.25
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-197.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-198.75=====0.78</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-221.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-220.5</h2>
 
         </div>
         <div class="column">
